[package]
name = "webview"
version = "0.1.0"
authors = ["joury"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
"console_error_panic_hook" = "0.1.6"
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
rand = "0.7.1"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlButtonElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'Window',
    'Performance',
]